--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -3,11 +3,24 @@
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
+    <mat-toolbar class="console-text"></mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item routerLink="/about" class="console-text-sidebar" *ngIf="this.router.url == '/about' else elseBlockAbout">*ABOUT_ME</a>
+      <ng-template #elseBlockAbout>
+          <a mat-list-item routerLink="/about" class="console-text-sidebar">ABOUT_ME</a>
+      </ng-template>
+      <a mat-list-item routerLink="/resume" class="console-text-sidebar" *ngIf="this.router.url == '/resume' else elseBlockResume">*RESUME</a>
+      <ng-template #elseBlockResume>
+          <a mat-list-item routerLink="/resume" class="console-text-sidebar">RESUME</a>
+      </ng-template>
+      <a mat-list-item routerLink="/projects" class="console-text-sidebar" *ngIf="this.router.url == '/projects' else elseBlockProjects">*PROJECTS</a>
+      <ng-template #elseBlockProjects>
+          <a mat-list-item routerLink="/projects" class="console-text-sidebar">PROJECTS</a>
+      </ng-template>
+      <a mat-list-item routerLink="/contact" class="console-text-sidebar" *ngIf="this.router.url == '/contact' else elseBlockContact">*CONTACT</a>
+      <ng-template #elseBlockContact>
+          <a mat-list-item routerLink="/contact" class="console-text-sidebar">CONTACT</a>
+      </ng-template>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -18,10 +31,11 @@
         mat-icon-button
         (click)="drawer.toggle()"
         *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+         <!-- <mat-icon aria-label="Side nav toggle icon">menu</mat-icon> -->
+        <img height="30px" width="30px" src="../../assets/white_hamburger_menu.png">
       </button>
-      <span>portfolio</span>
+      <span style="margin-left: 5px;" class="console-text-large">RYAN_ANDERSEN</span>
     </mat-toolbar>
-    <!-- Add Content Here -->
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
