--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,31 @@
+@import '@angular/material/prebuilt-themes/purple-green.css';
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body {
+     height: 100%;   
+
+    }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.console-text-medium {
+    font-family: "VT323";
+    font-size: 30px;
+    font-weight: 500;
+  }
+
+.console-text-large {
+    font-family: "VT323";
+    font-size: 50px;
+    font-weight: 500;
+  }
+
+.console-text-medium-large {
+    font-family: "VT323";
+    font-size: 37px;
+    font-weight: 500;
+}
+
+.console-text-medium-small{
+    font-family: "VT323";
+    font-size: 20px;
+}
