continued adding content. Still needs more projects, new link color (should be same as toolbar), and more about_me content. Initial buildout of Resume is finished.

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,6 @@
-<p>contact works!</p>
+<div class="contact-wrapper">
+    <h2 class="console-text-large sub"><a href="mailto:ryan.andersen117@gmail.com" style="color: white;">ryan.andersen117@gmail.com</a></h2>
+    <h2 class="console-text-large sub">801-400-0671</h2>
+    <a class="console-text-large sub" href="https://www.linkedin.com/in/ryan-andersen-dev">LinkedIn</a>
+    <a class="console-text-large sub" href="https://github.com/WizardRyan">GitHub</a>
+</div>
