--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,10 @@
-<p>projects works!</p>
+<div class="projects-wrapper">
+    <h2 class="console-text-medium-large header"><a href="https://calc.guru" style="color: white">Calc Guru</a></h2>
+    <ul>
+        <li class="console-text-medium"><a href="https://calc.guru">https://calc.guru</a></li>
+        <li class="console-text-medium">A website with over 300 calculators in 4 different languages, written for <a href="https://simsaw.com">SimSaw</a></li>
+        <li class="console-text-medium">The team handled deployment and styling finishing touches, I created the calculators, pages, translations, and everything else</li>
+        <li class="console-text-medium">Created in Hugo, a static website framework I learned on the job</li>
+        <li class="console-text-medium">During development I wrote some automation tools in Node that more than tripled my production speed by generating pages and leveraging the Google Translate API</li>
+    </ul>
+</div>
