--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -4,5 +4,35 @@
 
     <h2 class="console-text-medium-large header">EXPERIENCE:</h2>
     <h2 class="console-text-medium sub">Developer at SimSaw</h2>
+    <h2 class="console-text-medium">May 2018 - November 2018</h2>
+    <ul class="console-text-medium">
+        <li>Built web apps as well as desktop applications using AWS, JavaScript, C#, NodeJS, Hugo, Windows Forms, Twilio, and HTML/CSS</li>
+        <li>Learned many of these technologies as well as new APIs on the job while still timely completing projects</li>
+    </ul>
+
+    <h2 class="console-text-medium sub">IT and VoIP Customer Service Rep at Oldham Technology</h2>
+    <h2 class="console-text-medium">January 2019 - August 2019</h2>
+    <ul class="console-text-medium">
+        <li>Strengthened technological knowledge of networking, troubleshooting, and implementation of systems by working in IT</li>
+        <li>Made and took calls, went on-site to install hardware and trained clients on the use of our hardware. Improved my communication skills with clients as well as communication within a team</li>
+        <li>Saw improvements that could be made to the current system, and within months, used idle time to learn and implement sought after changes with no prior exposure to the technologies or frameworks in place, namely, PHP, Postgres, nginx, and FusionPBX</li>
+    </ul>
+
+    <h2 class="console-text-medium-large header">EDUCATION:</h2>
+    <h2 class="console-text-medium sub">Full Stack Web Development at Mountainland Technical College</h2>
+    <h2 class="console-text-medium">August 2017 - July 2018</h2>
+    <ul class="console-text-medium">
+        <li>Learned and implemented projects and websites built in Node, Angular, MongoDB, Firebase, HTML/CSS/SCSS, TypeScript, and JavaScript</li>
+        <li>Applied new information quickly while working in a team. Was chosen SCRUM master for a month long Angular/Firebase project</li>
+        <li>Have taken algorithm, data structures, and OOP classes. 4.0 GPA, 36 Science ACT</li>
+    </ul>
+
+    <h2 class="console-text-medium-large header">ACCOMPLISHMENTS:</h2>
+    <ul class="console-text-medium">
+        <li>Went to a summer coding bootcamp, and was chosen to speak as a representative for our class to potential donors for the program</li>
+        <li>Won every competition in my technical college; hacking, problem solving, and programming</li>
+        <li>Was chosen as CTE student of the month for my technological skills/motivation/determination</li>
+    </ul>
+
 </div>
 
