--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -4,10 +4,12 @@ h2 {
     margin-block-end: 0.23em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
+    word-wrap: break-word;
 }
 
 .resume-wrapper{
-    margin-left: 5px;
+    padding-left: 5px;
+    /* width:100%; */
 }
 
 .cs{
@@ -34,4 +36,5 @@ ul{
 
 li{
     margin-bottom: 10px;
+    word-wrap: break-word;
 }
