--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,4 +1,4 @@
-<div class="resume-wrapper">
+<div class="resume-wrapper" #wrapper>
     <h2 class="console-text-medium-large">COMPUTER SCIENCE MAJOR AT UTAH STATE UNIVERSITY</h2>
     <h2 class="console-text-medium-large">SEEKING PART TIME EMPLOYMENT</h2>
 
