--- a/src/styles.css
+++ b/src/styles.css
@@ -29,3 +29,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     font-family: "VT323";
     font-size: 20px;
 }
+
+.console-text-small{
+  font-family: "VT323";
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.console-text-medium-small{
+  font-family: "VT323";
+  font-size: 25px;
+  font-weight: 500;
+}
