--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,4 +3,5 @@
     <h2 class="console-text-large sub">801-400-0671</h2>
     <a class="console-text-large sub" href="https://www.linkedin.com/in/ryan-andersen-dev">LinkedIn</a>
     <a class="console-text-large sub" href="https://github.com/WizardRyan">GitHub</a>
+    <a class="console-text-large sub" href="https://usu.joinhandshake.com/users/13872790">HandShake</a>
 </div>
