--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -24,7 +24,7 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content id="sideContent">
-    <mat-toolbar color="primary">
+    <mat-toolbar color="primary" style="background: #8347cc;">
       <button
         type="button"
         aria-label="Toggle sidenav"
