--- a/src/fancy-styles.scss
+++ b/src/fancy-styles.scss
@@ -14,21 +14,27 @@
 
         &:after{
             content: "_";
-            animation: blink 500ms linear infinite alternate;
+            animation: blink 700ms infinite alternate;
         }
 }
 
 @-webkit-keyframes blink{
     0%{opacity: 0;}
+    49.9%{opacity: 0}
+    50%{opacity: 1}
     100%{opacity: 1;}
 }
 
 @-moz-keyframes blink{
     0%{opacity: 0;}
+    49.9%{opacity: 0}
+    50%{opacity: 1}
     100%{opacity: 1;}
 }
 
 @keyframes blink{
     0%{opacity: 0;}
+    49.9%{opacity: 0}
+    50%{opacity: 1}
     100%{opacity: 1;}
 }
