--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -6,7 +6,7 @@
     <ul>
         <li class="console-text-medium"><a href="https://calc.guru">https://calc.guru</a></li>
         <li class="console-text-medium">A website with over 300 calculators in 4 different languages, written for <a href="https://simsaw.com">SimSaw</a></li>
-        <li class="console-text-medium">I created the calculators, pages, routing, and translations while the rest of our team handled deployment and styling finishing touches.</li>
+        <li class="console-text-medium">I created the calculators, pages, routing, and translations while the rest of our team handled deployment and styling finishing touches</li>
         <li class="console-text-medium">Created in Hugo, a static website framework I learned on the job</li>
         <li class="console-text-medium">During development I wrote some automation tools in Node that more than tripled my production speed by both generating pages and leveraging the Google Translate API</li>
     </ul>
@@ -15,7 +15,7 @@
     <ul>
         <li class="console-text-medium"><a href="https://recipe-app-angular.firebaseapp.com">https://recipe-app-angular.firebaseapp.com</a></li>
         <li class="console-text-medium">A website where users can sign up and post recipes for everyone to see</li>
-        <li class="console-text-medium">Built using Angular + Angular Material on the front end and Firebase for the database</li>
+        <li class="console-text-medium">Built using Angular + Angular Material and Firebase for the database</li>
         <li class="console-text-medium">Lets users sign up with their own credentials, or by using Google Oauth</li>
         <li class="console-text-medium">Signed in users can comment on recipes, owners of the posted recipe can delete comments</li>
         <li class="console-text-medium">Try it yourself! Click the "?" on the sign in page if you'd like more help</li>
