--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,16 +1,16 @@
 <div class="resume-wrapper" #wrapper>
-    <h2 class="console-text-medium-large">COMPUTER SCIENCE MAJOR AT UTAH STATE UNIVERSITY</h2>
+    <h2 class="console-text-medium-large">COMPUTER SCIENCE MAJOR AT <a href="http://www.usu.edu/about">UTAH STATE UNIVERSITY</a></h2>
     <h2 class="console-text-medium-large">SEEKING PART TIME EMPLOYMENT</h2>
 
     <h2 class="console-text-medium-large header">EXPERIENCE:</h2>
-    <h2 class="console-text-medium sub">Developer at SimSaw</h2>
+    <h2 class="console-text-medium sub">Developer at <a href="https://www.simsaw.com">SimSaw</a></h2>
     <h2 class="console-text-medium">May 2018 - November 2018</h2>
     <ul class="console-text-medium">
         <li>Built web apps as well as desktop applications using AWS, JavaScript, C#, NodeJS, Hugo, Windows Forms, Twilio, and HTML/CSS</li>
         <li>Learned many of these technologies as well as new APIs on the job while still timely completing projects</li>
     </ul>
 
-    <h2 class="console-text-medium sub">IT and VoIP Customer Service Rep at Oldham Technology</h2>
+    <h2 class="console-text-medium sub">IT and VoIP Customer Service Rep at <a href="https://oldhamtechnology.com">Oldham Technology</a></h2>
     <h2 class="console-text-medium">January 2019 - August 2019</h2>
     <ul class="console-text-medium">
         <li>Strengthened technological knowledge of networking, troubleshooting, and implementation of systems by working in IT</li>
@@ -19,7 +19,7 @@
     </ul>
 
     <h2 class="console-text-medium-large header">EDUCATION:</h2>
-    <h2 class="console-text-medium sub">Full Stack Web Development at Mountainland Technical College</h2>
+    <h2 class="console-text-medium sub">Full Stack Web Development at <a href="https://mtec.edu">Mountainland Technical College</a></h2>
     <h2 class="console-text-medium">August 2017 - July 2018</h2>
     <ul class="console-text-medium">
         <li>Learned and implemented projects and websites built in Node, Angular, MongoDB, Firebase, HTML/CSS/SCSS, TypeScript, and JavaScript</li>
@@ -29,7 +29,7 @@
 
     <h2 class="console-text-medium-large header">ACCOMPLISHMENTS:</h2>
     <ul class="console-text-medium">
-        <li>Went to a summer coding bootcamp, and was chosen to speak as a representative for our class to potential donors for the program</li>
+        <li>Went to a coding bootcamp over a summer, and was chosen to speak as a representative for our class to potential donors for the program</li>
         <li>Won every competition in my technical college; hacking, problem solving, and programming</li>
         <li>Was chosen as CTE student of the month for my technological skills/motivation/determination</li>
     </ul>
