--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -5,7 +5,7 @@
     <h2 class="console-text-medium-large header"><a href="https://calc.guru" style="color: white">Calc Guru</a></h2>
     <ul>
         <li class="console-text-medium"><a href="https://calc.guru">https://calc.guru</a></li>
-        <li class="console-text-medium">A website with over 300 calculators in 4 different languages, written for <a href="https://simsaw.com">SimSaw</a></li>
+        <li class="console-text-medium">A website with over 300 calculators in 4 different languages, written for <a href="https://www.simsaw.com">SimSaw</a></li>
         <li class="console-text-medium">I created the calculators, pages, routing, and translations while the rest of our team handled deployment and styling finishing touches</li>
         <li class="console-text-medium">Created in Hugo, a static website framework I learned on the job</li>
         <li class="console-text-medium">During development I wrote some automation tools in Node that more than tripled my production speed by both generating pages and leveraging the Google Translate API</li>
@@ -24,7 +24,7 @@
     <h2 class="console-text-medium-large header">Eye Tracking Desktop Application</h2>
     <ul>
         <li class="console-text-medium">A desktop application that connected to an eye tracker, displayed text for a user to read, tracked the user's eye movements while they read the text, and then compiled an interactive graph of the data collected</li>
-        <li class="console-text-medium">I wrote this for <a href="https://simsaw.com">SimSaw</a> using Windows Forms in C#, this one was a solo project</li>
+        <li class="console-text-medium">I wrote this for <a href="https://www.simsaw.com">SimSaw</a> using Windows Forms in C#, this one was a solo project</li>
     </ul>
 
     <h2 class="console-text-medium-large header">Task List</h2>
