--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,7 +4,7 @@
 <span></span>
 <span>I'm a developer.</span>
 <span id="google">It means I can use Goog</span>
-<span id="after-google">It means I solve problems.</span>
+<span>It means I solve problems.</span>
 <span></span>
 <span id="skip">[{{skipContent}}]</span>
 <span></span>
@@ -12,4 +12,17 @@
 <span>Feel free to check out the rest of the site!</span>
 <span>Or stay here while I talk about myself.</span>
 <span></span>
+<span>Basically,</span>
+<span>I'm a huge nerd.</span>
+<span>For a lot of things.</span>
+<span>Sciences in particular.</span>
+<span>I read far too many Wikipedia articles.</span>
+<span>If we wanna talk about development, I've been programming since I was first introduced to it as a teenager.</span>
+<span>I think it's immensley satisfying to solve problems as efficiently as possible with the constraints computers and logic gives you.</span>
+<span>Automating things gets me excited too. (Who doesn't like eliminating a repetitive task?)</span>
+<span>In fact, if I'm on a project long enough, I'll probably find ways to improve the exising system.</span>
+<span>I think there's a good chance I'd be helpful to you.</span>
+<span>So feel free to</span>
+<a href="/contact">contact me</a>
+<span>if you'd like me to be on your team.</span>
 </pre>
