--- a/src/styles.css
+++ b/src/styles.css
@@ -45,3 +45,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .purple-blue{
   background: rgb(138, 66, 245);
 }
+
+::selection{
+  background: rgba(255, 255, 255, .99) !important;
+  color: black !important;
+}
