fixed hammerjs problems, stopped autoscroll if user scrolls

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -17,10 +17,13 @@
 <span>For a lot of things.</span>
 <span>Sciences in particular.</span>
 <span>I read far too many Wikipedia articles.</span>
+<span></span>
 <span>If we wanna talk about development, I've been programming since I was first introduced to it as a teenager.</span>
 <span>I think it's immensley satisfying to solve problems as efficiently as possible with the constraints computers and logic gives you.</span>
+<span></span>
 <span>Automating things gets me excited too. (Who doesn't like eliminating a repetitive task?)</span>
 <span>In fact, if I'm on a project long enough, I'll probably find ways to improve the exising system.</span>
+<span></span>
 <span>I think there's a good chance I'd be helpful to you.</span>
 <span>So feel free to</span>
 <a href="/contact">contact me</a>
