added word break to links

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<pre class="console-text" id="typewriter" (keyup)="onKey($event)">
+<pre class="console-text" id="typewriter" (keyup)="onKey($event)" (touchstart)="onTouch()">
 <span>Hey, I'm Ryan.</span>
 <span>It's nice to meet you.</span>
 <span></span>
@@ -18,13 +18,14 @@
 <span>Sciences in particular.</span>
 <span>I read far too many Wikipedia articles.</span>
 <span></span>
-<span>If we wanna talk about development, I've been programming since I was first introduced to it as a teenager.</span>
-<span>I think it's immensley satisfying to solve problems as efficiently as possible with the constraints computers and logic gives you.</span>
+<span>I've been programming since I was first introduced to it as a teenager.</span>
+<span>I think it's immensley satisfying to solve problems as efficiently as possible with the constraints computers and their logic gives you, be it tinkering with web apps or developing software from the ground up.</span>
 <span></span>
 <span>Automating things gets me excited too. (Who doesn't like eliminating a repetitive task?)</span>
-<span>In fact, if I'm on a project long enough, I'll probably find ways to improve the exising system.</span>
+<span>In fact, if I'm on a project long enough, I bet you a hot dog I'll find ways to automate or improve part of the exising system.</span>
 <span></span>
-<span>I think there's a good chance I'd be helpful to you.</span>
+<span>I guess what it comes down to is:</span>
+<span>I'd like to help you.</span>
 <span>So feel free to</span>
 <a href="/contact">contact me</a>
 <span>if you'd like me to be on your team.</span>
