--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -38,7 +38,7 @@
       <span style="margin-left: 5px;" class="console-text-large">RYAN_ANDERSEN</span>
     </mat-toolbar>
     <div [@routeAnimations]="prepareRoute(outlet)" [@routeAnimations.done]="scrollUp()">
-      <router-outlet #outlet="outlet" (activate)="onActivateRouter"></router-outlet>
+      <router-outlet #outlet="outlet"></router-outlet>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
