--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -13,6 +13,7 @@
 <span>Or stay here while I talk about myself.</span>
 <span></span>
 <span>I've been programming since I was first introduced to it as a teenager.</span>
+<span></span>
 <span>I think it's immensley satisfying to solve problems as efficiently as possible with the constraints computers and their logic gives you, be it tinkering with web apps or developing software from the ground up.</span>
 <span></span>
 <span>Automating things gets me excited too. (Who doesn't like eliminating a repetitive task?)</span>
