--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -17,9 +17,10 @@
 <span>I think it's immensley satisfying to solve problems as efficiently as possible with the constraints computers and their logic gives you, be it tinkering with web apps or developing software from the ground up.</span>
 <span></span>
 <span>Automating things gets me excited too. (Who doesn't like eliminating a repetitive task?)</span>
-<span>In fact, if I'm on a project long enough, I bet you a hot dog I'll find ways to automate or improve part of the exising system.</span>
+<span>In fact, if I'm on a project long enough, I bet you I'll find ways to automate or improve part of the exising system.</span>
 <span></span>
-<span>I guess what it comes down to is:</span>
+<span>If you're looking at this site, chances are you're looking to hire.</span>
+<span>Well,</span>
 <span>I'd like to help you.</span>
 <span>So feel free to</span>
 <a href="/contact">contact me</a>
