updated dialouge, employment status

--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,6 +1,6 @@
 <div class="resume-wrapper" #wrapper>
     <h2 class="console-text-medium-large">COMPUTER SCIENCE MAJOR AT <a href="http://www.usu.edu/about">UTAH STATE UNIVERSITY</a></h2>
-    <h2 class="console-text-medium-large">SEEKING PART TIME EMPLOYMENT</h2>
+    <h2 class="console-text-medium-large">SEEKING SUMMER INTERNSHIP</h2>
 
     <h2 class="console-text-medium-large header">EXPERIENCE:</h2>
     <h2 class="console-text-medium sub">Developer at <a href="https://www.simsaw.com">SimSaw</a></h2>
@@ -32,6 +32,7 @@
         <li>Went to a coding bootcamp over a summer, and was chosen to speak as a representative for our class to potential donors for the program</li>
         <li>Won every competition in my technical college; hacking, problem solving, and programming</li>
         <li>Was chosen as CTE student of the month for my technological skills/motivation/determination</li>
+        <li>Won 3rd place with my team at USU's 2020 hackathon with around 200 attendants</li>
     </ul>
 
 </div>
