--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,21 +8,18 @@
 <span></span>
 <span id="skip">[{{skipContent}}]</span>
 <span></span>
-<span>Anyways, </span>
-<span>Feel free to check out the rest of the site!</span>
-<span>Or stay here while I talk about myself.</span>
-<span></span>
-<span>I've been programming since I was first introduced to it as a teenager.</span>
+<span>I've been programming for about 5 years.</span>
 <span></span>
 <span>I think it's immensley satisfying to solve problems as efficiently as possible with the constraints computers and their logic gives you, be it tinkering with web apps or developing software from the ground up.</span>
 <span></span>
-<span>Automating things gets me excited too. (Who doesn't like eliminating a repetitive task?)</span>
-<span>In fact, if I'm on a project long enough, I bet you I'll find ways to automate or improve part of the exising system.</span>
+<span>I'm interested in a lot of different areas of CS!</span>
+<span>For example, lately I've been getting into graphics and writing a ray-tracer on the side.</span>
 <span></span>
-<span>If you're looking at this site, chances are you're looking to hire.</span>
-<span>Well,</span>
-<span>I'd like to help you.</span>
-<span>So feel free to</span>
+<span>I also enjoy lifting, hiking, drawing, playing the ocarina and the piano, and whatever else I'm obsessed with at the moment.</span>
+<span></span>
+<span>At any rate,</span>
+<span>Thanks for stopping by!</span>
+<span>Feel free to</span>
 <a href="/contact">contact me</a>
-<span>if you'd like me to be on your team.</span>
+<span>if you have any questions or you'd like me to be on your team!</span>
 </pre>
