--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,7 +2,8 @@
   <mat-sidenav #drawer class="sidenav" fixedInViewport
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
+      [opened]="(isHandset$ | async) === false"
+      style="background: #141414">
     <mat-toolbar class="console-text"></mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/about" class="console-text-sidebar" *ngIf="this.router.url == '/about' else elseBlockAbout">*ABOUT_ME</a>
@@ -24,7 +25,7 @@
     </mat-nav-list>
   </mat-sidenav>
   
-  <mat-sidenav-content id="sideContent" (swipeRight)="drawer.open()">
+  <mat-sidenav-content id="sideContent" (swipeRight)="drawer.open()" class="content-background">
     <mat-toolbar color="primary" style="background: #8347cc;">
       <button
         type="button"
@@ -38,7 +39,7 @@
       <span style="margin-left: 5px;" class="console-text-large">RYAN_ANDERSEN</span>
     </mat-toolbar>
     <div [@routeAnimations]="prepareRoute(outlet)" [@routeAnimations.done]="scrollUp()">
-      <router-outlet #outlet="outlet"></router-outlet>
+      <router-outlet #outlet="outlet" style="background-color: black;"></router-outlet>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
