--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,12 +8,12 @@
 <span></span>
 <span id="skip">[{{skipContent}}]</span>
 <span></span>
-<span>I've been programming for about 5 years.</span>
+<span>I've been programming for about 5 years now.</span>
 <span></span>
 <span>I think it's immensley satisfying to solve problems as efficiently as possible with the constraints computers and their logic gives you, be it tinkering with web apps or developing software from the ground up.</span>
 <span></span>
 <span>I'm interested in a lot of different areas in CS!</span>
-<span>For example, lately I've been getting into graphics and have been writing a ray-tracer on the side.</span>
+<span>For example, lately I've been getting into graphics and have been writing a ray tracer on the side.</span>
 <span></span>
 <span>I also enjoy lifting, hiking, drawing, playing the ocarina and the piano, and whatever else I'm obsessed with at the moment.</span>
 <span></span>
