--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -2,43 +2,53 @@
     <a class="console-text-medium-large header" href="https://github.com/WizardRyan" style=" display: block; margin-top: 20px; color: white;">My GitHub</a>
     <a class="console-text-medium" href="https://github.com/WizardRyan" style=" display: block; margin-top: 20px;">https://github.com/WizardRyan</a>
 
-    <h2 class="console-text-medium-large header"><a href="https://calc.guru" style="color: white">Calc Guru</a></h2>
-    <ul>
-        <li class="console-text-medium"><a href="https://calc.guru">https://calc.guru</a></li>
-        <li class="console-text-medium">A website with over 300 calculators in 4 different languages, written for <a href="https://www.simsaw.com">SimSaw</a></li>
-        <li class="console-text-medium">I created the calculators, pages, routing, and translations while the rest of our team handled deployment and styling finishing touches</li>
-        <li class="console-text-medium">Created in Hugo, a static website framework I learned on the job</li>
-        <li class="console-text-medium">During development I wrote some automation tools in Node that more than tripled my production speed by both generating pages and leveraging the Google Translate API</li>
-    </ul>
-    
-    <h2 class="console-text-medium-large header"><a href="https://recipe-app-angular.firebaseapp.com" style="color: white">Angular Recipe App</a></h2>
-    <ul>
-        <li class="console-text-medium"><a href="https://recipe-app-angular.firebaseapp.com">https://recipe-app-angular.firebaseapp.com</a></li>
-        <li class="console-text-medium">A website where users can sign up and post recipes for everyone to see</li>
-        <li class="console-text-medium">Built using Angular + Angular Material and Firebase for the database</li>
-        <li class="console-text-medium">Lets users sign up with their own credentials, or by using Google Oauth</li>
-        <li class="console-text-medium">Signed in users can comment on recipes, owners of the posted recipe can delete comments</li>
-        <li class="console-text-medium">Try it yourself! Click the "?" on the sign in page if you'd like more help</li>
-    </ul>
+    <div class="bg-5">
+        <h2 class="console-text-medium-large header"><a href="https://calc.guru" style="color: white">Calc Guru</a></h2>
+        <ul>
+            <li class="console-text-medium"><a href="https://calc.guru">https://calc.guru</a></li>
+            <li class="console-text-medium">A website with over 300 calculators in 4 different languages, written for <a href="https://www.simsaw.com">SimSaw</a></li>
+            <li class="console-text-medium">I created the calculators, pages, routing, and translations while the rest of our team handled deployment and styling finishing touches</li>
+            <li class="console-text-medium">Created in Hugo, a static website framework I learned on the job</li>
+            <li class="console-text-medium">During development I wrote some automation tools in Node that more than tripled my production speed by both generating pages and leveraging the Google Translate API</li>
+        </ul>
+    </div>
 
-    <h2 class="console-text-medium-large header">Eye Tracking Desktop Application</h2>
-    <ul>
-        <li class="console-text-medium">A desktop application that connected to an eye tracker, displayed text for a user to read, tracked the user's eye movements while they read the text, and then compiled an interactive graph of the data collected</li>
-        <li class="console-text-medium">I wrote this for <a href="https://www.simsaw.com">SimSaw</a> using Windows Forms in C#, this one was a solo project</li>
-    </ul>
-
-    <h2 class="console-text-medium-large header">Task List</h2>
-    <ul>
-        <li class="console-text-medium"><a href="https://wizardryan.github.io/to-do-bootstrap-jquery/">https://wizardryan.github.io/to-do-bootstrap-jquery/</a></li>
-        <li class="console-text-medium">A To Do web app, users can dynamically add and save cards and tasks</li>
-        <li class="console-text-medium">Data is saved in local storage, has responsive design for mobile and desktop</li>
-        <li class="console-text-medium">Built using Bootstrap and JQuery</li>
-    </ul>
+    <div class="bg-4">
+        <h2 class="console-text-medium-large header"><a href="https://recipe-app-angular.firebaseapp.com" style="color: white">Angular Recipe App</a></h2>
+        <ul>
+            <li class="console-text-medium"><a href="https://recipe-app-angular.firebaseapp.com">https://recipe-app-angular.firebaseapp.com</a></li>
+            <li class="console-text-medium">A website where users can sign up and post recipes for everyone to see</li>
+            <li class="console-text-medium">Built using Angular + Angular Material and Firebase for the database</li>
+            <li class="console-text-medium">Lets users sign up with their own credentials, or by using Google Oauth</li>
+            <li class="console-text-medium">Signed in users can comment on recipes, owners of the posted recipe can delete comments</li>
+            <li class="console-text-medium">Try it yourself! Click the "?" on the sign in page if you'd like more help</li>
+        </ul>
+    </div>
     
 
-    <h2 class="console-text-medium-large header">This Website</h2>
-    <ul>
-        <li class="console-text-medium">Of course! \(^_^)/</li>
-        <li class="console-text-medium">Made in Angular with Angular Material</li>
-    </ul>
+    <div class="bg-2">
+        <h2 class="console-text-medium-large header">Eye Tracking Desktop Application</h2>
+        <ul>
+            <li class="console-text-medium">A desktop application that connected to an eye tracker, displayed text for a user to read, tracked the user's eye movements while they read the text, and then compiled an interactive graph of the data collected</li>
+            <li class="console-text-medium">I wrote this for <a href="https://www.simsaw.com">SimSaw</a> using Windows Forms in C#, this one was a solo project</li>
+        </ul>
+    </div>
+
+    <div class="bg-3">
+        <h2 class="console-text-medium-large header">Task List</h2>
+        <ul>
+            <li class="console-text-medium"><a href="https://wizardryan.github.io/to-do-bootstrap-jquery/">https://wizardryan.github.io/to-do-bootstrap-jquery/</a></li>
+            <li class="console-text-medium">A To Do web app, users can dynamically add and save cards and tasks</li>
+            <li class="console-text-medium">Data is saved in local storage, has responsive design for mobile and desktop</li>
+            <li class="console-text-medium">Built using Bootstrap and JQuery</li>
+        </ul>
+    </div>
+    
+    <div class="bg-1">
+        <h2 class="console-text-medium-large header">This Website</h2>
+        <ul>
+            <li class="console-text-medium">Of course! \(^_^)/</li>
+            <li class="console-text-medium">Made in Angular with Angular Material</li>
+        </ul>
+    </div>
 </div>
