--- a/src/styles.css
+++ b/src/styles.css
@@ -54,3 +54,20 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   background: rgba(255, 255, 255, .99) !important;
   color: black !important;
 }
+
+.bg-1{
+  background-color: rgb(64, 0, 0);
+}
+.bg-2{
+  background-color: rgb(0, 64, 0);
+}
+
+.bg-3{
+  background-color: rgb(0, 0, 64);
+}
+.bg-4{
+  background-color: rgb(64, 64, 40);
+}
+.bg-5{
+  background-color: rgb(0, 64, 64);
+}
