minor content and style changes

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,6 +1,8 @@
 <div class="projects-wrapper">
-    <a class="console-text-medium-large header" href="https://github.com/WizardRyan" style=" display: block; margin-top: 20px; color: white;">My GitHub</a>
-    <a class="console-text-medium" href="https://github.com/WizardRyan" style=" display: block; margin-top: 20px;">https://github.com/WizardRyan</a>
+    <div class="bg-6">
+        <a class="console-text-medium-large header" href="https://github.com/WizardRyan" style=" display: block; padding-top: 20px; color: white;">My GitHub</a>
+        <a class="console-text-medium" href="https://github.com/WizardRyan" style=" display: block; margin-top: 20px;">https://github.com/WizardRyan</a>
+    </div>
 
     <div class="bg-5">
         <h2 class="console-text-medium-large header"><a href="https://calc.guru" style="color: white">Calc Guru</a></h2>
