--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <pre class="console-text" id="typewriter" (keyup)="onKey($event)" (touchstart)="onTouch()">
 <span>Hey, I'm Ryan.</span>
-<span>It's nice to meet you.</span>
+<span>It's nice to meet you!</span>
 <span></span>
 <span>I'm a developer.</span>
 <span id="google">It means I can use Goog</span>
@@ -15,7 +15,7 @@
 <span>I'm interested in a lot of different areas in CS!</span>
 <span>For example, lately I've been getting into graphics and have been writing a ray tracer on the side.</span>
 <span></span>
-<span>I also enjoy lifting, hiking, drawing, playing the ocarina and the piano, and whatever else I'm obsessed with at the moment.</span>
+<span>I also enjoy lifting, hiking,</span> <a href="https://www.deviantart.com/wizardryan">drawing</a><span>, playing the ocarina, and whatever else I'm obsessed with at the moment.</span>
 <span></span>
 <span>At any rate,</span>
 <span>Thanks for stopping by!</span>
