--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,6 +1,8 @@
 <div class="resume-wrapper" #wrapper>
-    <h2 class="console-text-medium-large">COMPUTER SCIENCE MAJOR AT <a href="http://www.usu.edu/about">UTAH STATE UNIVERSITY</a></h2>
-    <h2 class="console-text-medium-large">SEEKING SUMMER INTERNSHIP</h2>
+    <div class="bg-6">
+        <h2 class="console-text-medium-large" style=" display: block; padding-top: 20px; margin-top: 0px; color: white;">COMPUTER SCIENCE MAJOR AT <a href="http://www.usu.edu/about">UTAH STATE UNIVERSITY</a></h2>
+        <h2 class="console-text-medium-large" style=" display: block; margin-bottom: 0px; padding-bottom: 10px; color: white;">SEEKING SUMMER INTERNSHIP</h2>
+    </div>
 
     <div class="bg-1">
         <h2 class="console-text-medium-large header">EXPERIENCE:</h2>
@@ -8,7 +10,7 @@
         <h2 class="console-text-medium">May 2018 - November 2018</h2>
         <ul class="console-text-medium">
             <li>Built web apps as well as desktop applications using AWS, JavaScript, C#, NodeJS, Hugo, Windows Forms, Twilio, and HTML/CSS</li>
-            <li>Learned many of these technologies as well as new APIs on the job while still timely completing projects</li>
+            <li>Learned many of these technologies on the job while still keeping pace</li>
         </ul>
         
         <h2 class="console-text-medium sub">IT and VoIP Customer Service Rep at <a href="https://oldhamtechnology.com">Oldham Technology</a></h2>
@@ -28,17 +30,17 @@
         <ul class="console-text-medium">
             <li>Learned and implemented projects and websites built in Node, Angular, MongoDB, Firebase, HTML/CSS/SCSS, TypeScript, and JavaScript</li>
             <li>Applied new information quickly while working in a team. Was chosen SCRUM master for a month long Angular/Firebase project</li>
-            <li>Have taken algorithm, data structures, and OOP classes. 4.0 GPA, 36 Science ACT</li>
+            <li>Currently a Junior with a 4.0 GPA at Utah State University. Have taken algorithm and data structures, web development, and OOP classes.</li>
         </ul>
     </div>
 
     <div class="bg-3">
         <h2 class="console-text-medium-large header">ACCOMPLISHMENTS:</h2>
         <ul class="console-text-medium">
+            <li>Won 3rd place with my team at USU's 2020 hackathon with around 200 attendants</li>
             <li>Went to a coding bootcamp over a summer, and was chosen to speak as a representative for our class to potential donors for the program</li>
             <li>Won every competition in my technical college; hacking, problem solving, and programming</li>
             <li>Was chosen as CTE student of the month for my technological skills/motivation/determination</li>
-            <li>Won 3rd place with my team at USU's 2020 hackathon with around 200 attendants</li>
         </ul>
     </div>
 
