minor style fix on projects page

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,7 +1,7 @@
 <div class="projects-wrapper">
     <div class="bg-6">
         <a class="console-text-medium-large header" href="https://github.com/WizardRyan" style=" display: block; padding-top: 20px; color: white;">My GitHub</a>
-        <a class="console-text-medium" href="https://github.com/WizardRyan" style=" display: block; margin-top: 20px;">https://github.com/WizardRyan</a>
+        <a class="console-text-medium" href="https://github.com/WizardRyan" style=" display: block; margin-top: 20px; padding-bottom: 20px;">https://github.com/WizardRyan</a>
     </div>
 
     <div class="bg-5">
